AoC19 universal data path detection